--- a/ApellidosColeccionDeJuegos/Base.lproj/Main.storyboard
+++ b/ApellidosColeccionDeJuegos/Base.lproj/Main.storyboard
@@ -1,24 +1,136 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="y2e-eU-6Tt">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="BYZ-38-t0r" customClass="ViewController" customModule="ApellidosColeccionDeJuegos" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="9RD-Wo-fUP">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="9RD-Wo-fUP" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="521-x1-hRx"/>
+                            <constraint firstItem="9RD-Wo-fUP" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="7Hc-Re-69u"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="9RD-Wo-fUP" secondAttribute="trailing" id="LtC-o9-ovN"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="9RD-Wo-fUP" secondAttribute="bottom" id="RN9-8g-Do9"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="gEp-3o-ff4">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="cC0-Z9-jd9">
+                            <connections>
+                                <segue destination="H3O-Td-Mbk" kind="show" id="GXm-G0-jI0"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="9RD-Wo-fUP" id="p5y-iW-m5I"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="807" y="70"/>
+        </scene>
+        <!--Juegos View Controller-->
+        <scene sceneID="pbl-Oo-sYB">
+            <objects>
+                <viewController id="H3O-Td-Mbk" customClass="JuegosViewController" customModule="ApellidosColeccionDeJuegos" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="EuL-u0-oXM">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="q8y-Pq-wvY">
+                                <rect key="frame" x="67" y="120" width="280" height="150"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="012-IF-epY"/>
+                                    <constraint firstAttribute="width" constant="280" id="6in-Y3-Beu"/>
+                                </constraints>
+                            </imageView>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Ingresar titulo" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qro-KU-FLY">
+                                <rect key="frame" x="67" y="293" width="280" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iV5-Oa-J1i">
+                                <rect key="frame" x="169" y="347" width="76" height="31"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Agregar"/>
+                                <connections>
+                                    <action selector="agregarTapped:" destination="H3O-Td-Mbk" eventType="touchUpInside" id="w7N-cb-6Ea"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="l30-vi-1mQ"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="q8y-Pq-wvY" firstAttribute="top" secondItem="l30-vi-1mQ" secondAttribute="top" constant="32" id="RaS-g5-14X"/>
+                            <constraint firstItem="iV5-Oa-J1i" firstAttribute="centerX" secondItem="qro-KU-FLY" secondAttribute="centerX" id="RkO-3i-l0a"/>
+                            <constraint firstItem="q8y-Pq-wvY" firstAttribute="width" secondItem="qro-KU-FLY" secondAttribute="width" id="YzE-Wj-pvG"/>
+                            <constraint firstItem="q8y-Pq-wvY" firstAttribute="centerX" secondItem="EuL-u0-oXM" secondAttribute="centerX" id="cbM-k3-7b7"/>
+                            <constraint firstItem="q8y-Pq-wvY" firstAttribute="trailing" secondItem="qro-KU-FLY" secondAttribute="trailing" id="elL-eh-c5j"/>
+                            <constraint firstItem="qro-KU-FLY" firstAttribute="top" secondItem="q8y-Pq-wvY" secondAttribute="bottom" constant="23" id="gMl-Gg-P1y"/>
+                            <constraint firstItem="iV5-Oa-J1i" firstAttribute="top" secondItem="qro-KU-FLY" secondAttribute="bottom" constant="20" id="zxD-7J-xeU"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="OCv-ck-4j1">
+                        <rightBarButtonItems>
+                            <barButtonItem systemItem="camera" id="hTD-KA-r9s">
+                                <connections>
+                                    <action selector="camaraTapped:" destination="H3O-Td-Mbk" id="iBy-m5-Dn5"/>
+                                </connections>
+                            </barButtonItem>
+                            <barButtonItem title="Fotos" id="Yh7-Ia-hme">
+                                <connections>
+                                    <action selector="fotosTapped:" destination="H3O-Td-Mbk" id="CZ7-6i-Qdw"/>
+                                </connections>
+                            </barButtonItem>
+                        </rightBarButtonItems>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="imageView" destination="q8y-Pq-wvY" id="WAu-Wg-OT2"/>
+                        <outlet property="tituloTextField" destination="qro-KU-FLY" id="lnU-fM-cr7"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4gn-1O-S9i" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1527.536231884058" y="69.642857142857139"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="AV1-mC-65H">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="y2e-eU-6Tt" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="VpZ-1L-eW1">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="kD0-0h-ULE"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zww-Ep-Ge2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="28.985507246376812" y="69.642857142857139"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
